tests/algorithms/x/CS/data_structures/binary_tree/treap.error
exit status 1
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/Program.cs(135,58): error CS1501: No overload for method 'Split' takes 1 arguments [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/Program.cs(136,42): error CS1061: 'string[]' does not contain a definition for 'right' and no accessible extension method 'right' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/Program.cs(137,49): error CS1061: 'string[]' does not contain a definition for 'left' and no accessible extension method 'left' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/Program.cs(139,56): error CS1501: No overload for method 'Split' takes 1 arguments [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/Program.cs(140,40): error CS1061: 'string[]' does not contain a definition for 'left' and no accessible extension method 'left' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/app.csproj]
/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/Program.cs(141,62): error CS1061: 'string[]' does not contain a definition for 'right' and no accessible extension method 'right' accepting a first argument of type 'string[]' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Algorithms_Golden001_data_structures_binary_tree_treap3064147682/001/app.csproj]

The build failed. Fix the build errors and run again.