tests/algorithms/x/CS/data_structures/binary_tree/treap.cs
// Generated by Mochi 0.10.59 on 2025-08-06 22:16 +0700
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text.Json;
using System.Numerics;
using System.Collections;

class SplitResult {
    public long left;
    public long right;
    public override string ToString() => $"SplitResult {{left = {left}, right = {right}}}";
}
class Program {
    static bool seededNow = false;
    static long nowSeed = 0;
    static long _now() {
        if (!seededNow) {
            var s = Environment.GetEnvironmentVariable("MOCHI_NOW_SEED");
            if (long.TryParse(s, out var v)) {
                nowSeed = v;
                seededNow = true;
            }
        }
        if (seededNow) {
            nowSeed = unchecked(nowSeed * 1664525 + 1013904223);
            nowSeed %= 9223372036854775783L;
            if (nowSeed < 0) nowSeed += 9223372036854775783L;
            return nowSeed;
        }
        return DateTime.UtcNow.Ticks / 100;
    }
    static long _mem() {
        return GC.GetTotalAllocatedBytes(true);
    }
    static long _len(object v) {
        if (v is Array a) return a.Length;
        if (v is string s) return s.Length;
        if (v is System.Collections.ICollection c) return c.Count;
        return Convert.ToString(v).Length;
    }
    static long _mod(long a, long b) {
        if (b == 0) return 0;
        var r = a % b;
        if ((r < 0 && b > 0) || (r > 0 && b < 0)) r += b;
        return r;
    }
    static string _substr(string s, long start, long end) {
        if (start < 0) start = 0;
        if (end < 0) end = 0;
        if (start > s.Length) start = s.Length;
        if (end > s.Length) end = s.Length;
        if (start > end) start = end;
        return s.Substring((int)start, (int)(end - start));
    }
    static string _fmt(object v) {
        if (v is Array a) {
            var parts = new List<string>();
            foreach (var x in a) parts.Add(_fmt(x));
            return "[" + string.Join(", ", parts) + "]";
        }
        if (v is System.Collections.IDictionary d) {
            var keys = new List<string>();
            foreach (var k in d.Keys) keys.Add(k.ToString());
            keys.Sort();
            var parts = new List<string>();
            foreach (var k in keys) parts.Add(k + ":" + _fmt(d[k]));
            return "map[" + string.Join(", ", parts) + "]";
        }
        if (v is System.Collections.IEnumerable e && !(v is string)) {
            var parts = new List<string>();
            foreach (var x in e) parts.Add(_fmt(x));
            return string.Join(", ", parts);
        }
        if (v is string s) return "\"" + s.Replace("\"", "\\\"") + "\"";
        if (v is bool b) return b ? "true" : "false";
        return Convert.ToString(v);
    }
    static string _fmtStr(object v) {
        if (v is Array a) {
            var parts = new List<string>();
            foreach (var x in a) parts.Add(_fmtStr(x));
            return "[" + string.Join(" ", parts) + "]";
        }
        if (v is System.Collections.IDictionary d) {
            var keys = new List<string>();
            foreach (var k in d.Keys) keys.Add(k.ToString());
            keys.Sort();
            var parts = new List<string>();
            foreach (var k in keys) parts.Add(k + ":" + _fmtStr(d[k]));
            return "map[" + string.Join(" ", parts) + "]";
        }
        if (v is System.Collections.IEnumerable e && !(v is string)) {
            var parts = new List<string>();
            foreach (var x in e) parts.Add(_fmtStr(x));
            return string.Join(" ", parts);
        }
        if (v is string s) return "\"" + s.Replace("\"", "\\\"") + "\"";
        if (v is bool b) return b ? "true" : "false";
        return Convert.ToString(v);
    }
    public static string _fmtTop(object v) {
        if (v is Array a && a.Length > 0 && a.GetValue(0) is Array) {
            var parts = new List<string>();
            foreach (var x in a) parts.Add(_fmt(x));
            return string.Join(" ", parts);
        }
        if (v is string s) return s;
        return _fmt(v);
    }
    static long NIL_0 = (0 - 1);
    static long[] node_values_1 = new long[]{};
    static double[] node_priors_2 = new double[]{};
    static long[] node_lefts_3 = new long[]{};
    static long[] node_rights_4 = new long[]{};
    static long seed_5 = 1;
    public static double random() {
        seed_5 = _mod(((seed_5 * 13) + 7), 100);
        return (Convert.ToDouble(seed_5) / 100.0);
    }

    public static long new_node(long value_6) {
        node_values_1 = (Enumerable.ToArray(Enumerable.Append<long>(node_values_1, value_6)));
        node_priors_2 = (Enumerable.ToArray(Enumerable.Append<double>(node_priors_2, Program.random())));
        node_lefts_3 = (Enumerable.ToArray(Enumerable.Append<long>(node_lefts_3, NIL_0)));
        node_rights_4 = (Enumerable.ToArray(Enumerable.Append<long>(node_rights_4, NIL_0)));
        return (node_values_1.Length - 1);
    }

    public static SplitResult split(long root_7, long value_8) {
        if ((root_7 == NIL_0)) {
            return new SplitResult{left = NIL_0, right = NIL_0};
        };
        if ((value_8 < node_values_1[(int)(root_7)])) {
            string[] res_9 = node_lefts_3[(int)(root_7)].Split(value_8);
            node_lefts_3[root_7] = res_9.right;
            return new SplitResult{left = res_9.left, right = root_7};
        };
        string[] res_10 = node_rights_4[(int)(root_7)].Split(value_8);
        node_rights_4[root_7] = res_10.left;
        return new SplitResult{left = root_7, right = res_10.right};
    }

    public static long merge(long left_11, long right_12) {
        if ((left_11 == NIL_0)) {
            return right_12;
        };
        if ((right_12 == NIL_0)) {
            return left_11;
        };
        if ((node_priors_2[(int)(left_11)] < node_priors_2[(int)(right_12)])) {
            node_rights_4[left_11] = Program.merge(node_rights_4[(int)(left_11)], right_12);
            return left_11;
        };
        node_lefts_3[right_12] = Program.merge(left_11, node_lefts_3[(int)(right_12)]);
        return right_12;
    }

    public static long insert(long root_13, long value_14) {
        long node_15 = Program.new_node(value_14);
        SplitResult res_16 = Program.split(root_13, value_14);
        return Program.merge(Program.merge(res_16.left, node_15), res_16.right);
    }

    public static long erase(long root_17, long value_18) {
        SplitResult res1_19 = Program.split(root_17, (value_18 - 1));
        SplitResult res2_20 = Program.split(res1_19.right, value_18);
        return Program.merge(res1_19.left, res2_20.right);
    }

    public static long[] inorder(long i_21, long[] acc_22) {
        if ((i_21 == NIL_0)) {
            return acc_22;
        };
        long[] left_acc_23 = Program.inorder(node_lefts_3[(int)(i_21)], acc_22);
        long[] with_node_24 = (Enumerable.ToArray(Enumerable.Append<long>(left_acc_23, node_values_1[(int)(i_21)])));
        return Program.inorder(node_rights_4[(int)(i_21)], with_node_24);
    }

    public static void main() {
        long root_25 = NIL_0;
        root_25 = Program.insert(root_25, 1);
        Console.WriteLine(Program._fmtTop(_fmtStr(Program.inorder(root_25, new long[]{}))));
        root_25 = Program.insert(root_25, 3);
        root_25 = Program.insert(root_25, 5);
        root_25 = Program.insert(root_25, 17);
        root_25 = Program.insert(root_25, 19);
        root_25 = Program.insert(root_25, 2);
        root_25 = Program.insert(root_25, 16);
        root_25 = Program.insert(root_25, 4);
        root_25 = Program.insert(root_25, 0);
        Console.WriteLine(Program._fmtTop(_fmtStr(Program.inorder(root_25, new long[]{}))));
        root_25 = Program.insert(root_25, 4);
        root_25 = Program.insert(root_25, 4);
        root_25 = Program.insert(root_25, 4);
        Console.WriteLine(Program._fmtTop(_fmtStr(Program.inorder(root_25, new long[]{}))));
        root_25 = Program.erase(root_25, 0);
        Console.WriteLine(Program._fmtTop(_fmtStr(Program.inorder(root_25, new long[]{}))));
        root_25 = Program.erase(root_25, 4);
        Console.WriteLine(Program._fmtTop(_fmtStr(Program.inorder(root_25, new long[]{}))));
    }

    static void Main() {
        {
            var __memStart = _mem();
            var __start = _now();
            Program.main();
            var __end = _now();
            var __memEnd = _mem();
            var __dur = (__end - __start);
            if (__dur <= 0) __dur = 1;
            var __memDiff = __memEnd - __memStart;
            if (__memDiff <= 0) __memDiff = __memEnd;
            Console.WriteLine("{\"name\":\"main\",\"duration_us\":" + __dur + ",\"memory_bytes\":" + __memDiff + "}");
        }
    }
}
